fix: add background attachment scrolling on banner on smaller screens

--- a/src/styles/components/banner.sass
+++ b/src/styles/components/banner.sass
@@ -62,7 +62,8 @@
         margin-top: 10px  
 
     @media (max-width: 768px)
-        height: 100vh
+        height: calc( 100vh - 30vh )
+        background-attachment: scroll
         div
             width: 90%
 
